# ChangeLog for app-accessibility/florence
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*florence-0.5.0 (08 Sep 2011)

  08 Sep 2011; Michael Weber <xmw@gentoo.org> +florence-0.5.0.ebuild,
  +metadata.xml:
  Initial import, modiefied from n8x0
