@@ -1,24 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-- -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
-
 DIST florence-0.5.0.tar.bz2 479264 RMD160 fe6feef12eea4b0f5f8598f32ce90bd0f6414df1 SHA1 f5d2e0e2798b685992c49dff2749a5fd2d74841d SHA256 485416250e83104f44c917d63508fcf2ef2c45023777897fa637c7470fa6645c
+DIST florence-0.5.1.tar.bz2 631132 RMD160 dc18071c98bfa3deb53f2ef1a48d69525c0fa92c SHA1 a3f1c29dd436150002ec14ce9a63de1d72bd1f91 SHA256 7b06ed84ef2b7b22d8d2cf0c7d013a05409bd82028240ac8719a68b192d5bc62
 EBUILD florence-0.5.0.ebuild 1087 RMD160 2f096291eb54ba117fc6ed58710060a34d7de551 SHA1 51bfdd98cd1fc75ce245986a0c5140e42816036a SHA256 1cf77184cec001210d89463c1a3a45f3efc0e1e398611c7fdb164b9296b8a1ec
-MISC ChangeLog 284 RMD160 611b9998613f0cc29d6753fbb0e0abc26869bb08 SHA1 4f24e5e5a3862e07fc0e121b00347024adf72ea5 SHA256 2cbb175415f5fcad47b78e410817fb3a0f47970f5f0d99c54dbedd0b1166ffb9
+EBUILD florence-0.5.1.ebuild 1087 RMD160 d0f946aa1f373f09d916dfabfc5e6733f5f85fcd SHA1 4043bbc3b34eb5219147103d36b60d4b77837fd2 SHA256 4e6068a268bcd81fac12ee86fccf9d1b92c7ad18623cc8673b03cd8a1ff7da18
+MISC ChangeLog 417 RMD160 14c94ca6a76d93ebe0d85ddb938423eca4d130e1 SHA1 2882d4811f00df389effe55fa8608bce142469be SHA256 ab7dfe50940e4914cd416cbdb059d5f928f960977f797f9453ca61df83fd14e4
 MISC metadata.xml 197 RMD160 893edf1438d595cd663230d6f8560df2dbd8a2db SHA1 5182c9549556f41d87bac6cd32ef892f9e62f2da SHA256 a142667810e0d12df593fef732bc0f70ced18d5bfc692184025b4c7439246ddb
-- -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
-
-iF0EAREIAAYFAk5ohT8ACgkQknrdDGLu8JC9awD3frfXARYB5QR2Bx8qGEpG3Jrw
-DuzSM20zwcUqPBnCAgEAmpEX/fcUnzrDb/h18L8e99dpVrKnFKt36SOXzIL30qc=
-=GIYN
-- -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk5ohaoACgkQknrdDGLu8JDKqQEAjBZowNlpibVAAjE+FXo1GAJG
-L2mwnyUl9V1H+/J+0fsA/ixzf9+OqErD8dMzSLus+d2qLiMvWwF9rVLGhInQCQax
-=Q9Z8
+iF4EAREIAAYFAk8knE4ACgkQknrdDGLu8JCPhQD+KRfefk8qHmLUSadpy9n4XNty
+FXmmcYgnkBs5tn/UzfkA/2H6qPhM0k//B3O1x9N+82mYBjfhr5akMtIFjiNtjR9k
+=09Dq
 -----END PGP SIGNATURE-----
