@@ -1,6 +1,12 @@
 # ChangeLog for app-accessibility/florence
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*florence-0.5.1 (29 Jan 2012)
+
+  29 Jan 2012; Michael Weber <xmw@gentoo.org> +florence-0.5.1.ebuild,
+  metadata.xml:
+  Version bump
 
 *florence-0.5.0 (08 Sep 2011)
 
